Fixed weird overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
 
 main {
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
